updated the css cdn

--- a/email_sig.html
+++ b/email_sig.html
@@ -9,7 +9,7 @@
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <!-- Tailwind CSS -->
-  <link rel="stylesheet" href="">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/AndrewWilks/email_sig/output.css">
 </head>
 
 <body class="bg-gray-900 text-white text-lg">
