--- a/email_sig.html
+++ b/email_sig.html
@@ -10,10 +10,10 @@
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <!-- Tailwind -->
-  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="http://cdn.jsdelivr.net/gh/AndrewWilks/email_sig/output.css">
 </head>
 
-<body class="bg-gray-900 text-white text-lg">
+<body class=" bg-gray-900 text-white text-lg">
 
   <!-- email body -->
   <section class="my-12 max-w-screen-xl xl:mx-auto mx-8 font-mono rounded bg-gray-800 px-6 py-3">
