Removed the print config

--- a/email_sig.html
+++ b/email_sig.html
@@ -10,7 +10,9 @@
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <!-- Tailwind -->
-  <link rel="stylesheet" href="http://cdn.jsdelivr.net/gh/AndrewWilks/email_sig/output.css">
+  <link rel="stylesheet"
+    href="https://cdn.jsdelivr.net/gh/AndrewWilks/email_sig@a173293da492f5926c47d64b72cef7bd64ee6559/output.min.css">
+  <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/AndrewWilks/email_sig/output.css"> -->
 </head>
 
 <body class=" bg-gray-900 text-white text-lg">
