--- a/email_sig.html
+++ b/email_sig.html
@@ -10,8 +10,9 @@
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <!-- Tailwind -->
-  <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/AndrewWilks/email_sig@master/output.css"> -->
-  <link rel="stylesheet" href="./output.css">
+  <link rel="stylesheet"
+    href="https://cdn.jsdelivr.net/gh/AndrewWilks/email_sig@9746a0da5c8bee5282f2307d99eb562d23864127/output.css">
+  <!-- <link rel="stylesheet" href="./output.css"> -->
 </head>
 
 <body class=" bg-gray-900 text-white text-lg">
